mass changes replaced index with template html code; now fully dynamic with thymleaf - implemented user creation - implemented user search